--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "typeface-karla": "^1.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
